# mcp-agenthub

./: .dockerignore  .env.example  .gitignore  .mcp.json  BUILD-SPEC-VERIFICATION.md  BUILD-SPEC.md  BUILD-TASKS.md  CLAUDE.md  KEYRING-INTEGRATION-COMPLETE.md  README.md  mcp-agenthub.code-workspace  pyproject.toml  requirements.txt
.claude/: settings.local.json
.config/: .markdownlint-cli2.jsonc  oaicopilot-config-2026-02-03.json
.github/: copilot-instructions.md
.github/instructions/: code-review-generic.instructions.md  codexer.instructions.md  instructions.instructions.md  langchain-python.instructions.md  node-mcp-agent.instructions.md  playwright-python.instructions.md  python-mcp-server.instructions.md  reactjs.instructions.md  tasksync.instructions.md  typescript-5-es2022.instructions.md  typescript-mcp-server.instructions.md
.github/workflows/: ci.yml  tests.yml
configs/: README.md  enhancement-rules.json  mcp-servers.json  vscode.json
configs/clients/: README.md
docs/: COPILOT-KEYS-README.md  app-configs.md  keyring-migration-guide.md
docs/architecture/: ADR-001-stdio-transport.md  README.md
docs/reviews/: README.md
guides/: app-configs.md  claude-desktop-integration.md  index.md  launchagent-setup.md  markdown.css  raycast-integration.md  testing-integrations.md  vscode-integration.md
guides/03-integrations/: claude-desktop.md  (+2 more)
mcps/: README.md  agenthub-bridge.js  package.json
router/: audit.py  audit_integrity.py  keyring_manager.py  main.py  security_alerts.py
scripts/: README.md  audit-maintenance.sh  docker.sh  mcp-proxy-restart.sh  mcp-proxy.sh  mcp-stdio-bridge.sh  release.sh  run-llm-txt-local-boot.sh  run-llm-txt-local.sh  run-ollama-mcp.sh  siem-forwarder.sh  start-ollama.sh
templates/: dashboard.html
(+37 files in other folders)
